# agent-sandboxes

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
book/: index.html  llms.txt  robots.txt  sitemap.xml
book/assets/: book.js
book/chapters/: ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  ch08.html  ch09.html  ch10.html  ch11.html  ch12.html  ch13.html  ch14.html  ch15.html  ch16.html
challenges/: ch01.py  ch01_test.py  ch02.py  ch02_test.py  ch03.py  ch03_test.py  ch04.py  ch04_test.py  ch05.py  ch05_test.py  ch06.py  ch06_test.py  ch07.py  ch07_test.py  ch08.py  ch08_test.py  ch09.py  ch09_test.py  ch10.py  ch10_test.py  ch11.py  ch11_test.py  ch12.py  ch12_test.py  ch13.py  ch13_test.py  ch14.py  ch14_test.py  ch15.py  ch15_test.py  ch16.py  ch16_test.py  conftest.py
examples/: ch01_unsafe_agent.py  ch02_overhead_comparison.py  ch03_lifecycle_trace.py  ch04_build_image.py  ch05_launch_and_connect.py  ch06_lifecycle_management.py  ch07_code_executor.py  ch08_package_management.py  ch09_filesystem_isolation.py  ch10_resource_limits.py  ch11_session_manager.py  ch12_code_scanner.py  ch13_observability.py  ch14_orchestrator.py  ch15_repl_session.py  ch16_malware_analysis_pipeline.py  sandbox_config.py
notes/: course-outline.md  fact-check-manifest.json  research.md
solutions/: ch01.py  ch02.py  ch03.py  ch04.py  ch05.py  ch06.py  ch07.py  ch08.py  ch09.py  ch10.py  ch11.py  ch12.py  ch13.py  ch14.py  ch15.py  ch16.py
