[project]
name = "lambda-microvm-sandbox"
version = "1.0.0"
description = "Building Agent Sandboxes with AWS Lambda MicroVMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The course code lives as loose scripts under examples/, challenges/, and
# solutions/ — there is no importable package. This installs the runtime
# dependencies (so `pip install -e .` works) without trying to ship a
# package that doesn't exist.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["challenges", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
